--- a/success-rate.html
+++ b/success-rate.html
@@ -179,7 +179,7 @@
 
             <main class="flex-1 p-6 overflow-y-auto font-sans bg-gray-50">
 
-                <div class="mx-auto max-w-7xl ">
+                <div class="">
                     <div class="flex flex-col items-start justify-between gap-4 mb-6 md:flex-row md:items-center">
                         <div>
                             <h1 class="text-2xl font-bold text-gray-800">Success Rate</h1>
@@ -226,7 +226,6 @@
                                 </div>
                             </div>
                         </div>
-
                         <!-- Onboarding Time Card -->
                         <div
                             class="border-l-4 border-l-[#2196F3] p-5 flex flex-col min-h-[140px] bg-white rounded-xl shadow-sm">
@@ -281,8 +280,6 @@
                             </div>
                             <!-- 3D Bar -->
                         </div>
-
-
                     </div>
 
                     <!-- Transactions View -->
